<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.easyhostel.signup"
    android:background="@drawable/back5">
    <ImageView
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:padding="1dp"
        android:src="@drawable/ic_person_add_black_24dp"

        />

    <EditText
        android:id="@+id/etd3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="textEmailAddress"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:textSize="17dp"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:textColorHint="#fff" />
    <EditText
        android:id="@+id/etd4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:background="@drawable/border"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:drawablePadding="12dp"
        android:hint="@string/hint2"
        android:textColorHint="#fff"
        android:inputType="text"
        android:layout_marginTop="7dp"
        android:padding="8dp"
        android:textSize="17dp"
        android:drawableLeft="@drawable/ic_regno_black_24dp"


        />


    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"

            android:drawableLeft="@drawable/ic_gender_black_24dp"
            android:padding="12dp"
            android:id="@+id/tx3" />

        <Spinner
            android:id="@+id/spinergender"
            android:layout_width="290dp"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:entries="@array/Gender"
            android:padding="8dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_faculty_black_24dp"
            android:padding="12dp"
            android:id="@+id/tx1" />

        <Spinner
            android:id="@+id/spinnerFaculty"
            android:layout_width="290dp"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:entries="@array/faculty"
            android:padding="8dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_year_black_24dp"
            android:padding="12dp"
            android:id="@+id/tx2" />

        <Spinner
            android:id="@+id/spineryear"
            android:layout_width="290dp"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@+id/tx2"
            android:layout_alignBottom="@+id/tx2"
            android:layout_centerHorizontal="true"
            android:entries="@array/Year"
            android:padding="8dp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/etd8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:drawablePadding="12dp"
        android:hint="@string/hint6"
        android:textColorHint="#fff"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="7dp"
        android:padding="8dp"
        android:background="@drawable/border"
        android:textSize="17dp"
        android:drawableLeft="@drawable/ic_mail_black_24dp"


        />

    <EditText
        android:id="@+id/etd9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint7"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="#fff"
        android:textSize="17dp" />







    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/change2"
            android:text="join"
            android:textColor="#ff9100"

            android:textSize="16dp" />


        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_home_black_24dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:visibility="gone" />



</LinearLayout>
